cluster/apps/monitoring/smokeping/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: smokeping-app
  namespace: monitoring
  labels:
    app.kubernetes.io/name: smokeping
    app.kubernetes.io/instance: smokeping-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: smokeping
    app.kubernetes.io/instance: smokeping-app
