cluster/apps/monitoring/smokeping/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smokeping-app
  namespace: monitoring
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "table-tennis"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflarewarp@kubernetescrd,networking-smokeping-redirect@kubernetescrd"
    external-dns.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_DOMAIN}"
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    external-dns/external: "true"
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - smokeping.${SECRET_LAB_DOMAIN}
  rules:
    - host: smokeping.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smokeping-app
                port:
                  number: 80
